# domain-utils

./: CHANGELOG.md  Cargo.toml  README.md  RESEARCH.md  TASKS.md  tasks.md
.github/workflows/: ci.yml
data/: tld-categories.json  tlds.txt
src/: cli.rs  date.rs  dns.rs  dnssec.rs  email.rs  http.rs  main.rs  output.rs  pricing.rs  propagation.rs  tlds.rs  tls.rs
src/backend/: auto.rs  mod.rs  rdap.rs  whois.rs
