[package]
name = "domain-cli"
version = "0.1.0"
edition = "2024"
description = "Check domain availability and WHOIS/registration data across multiple backends, keyless by default (RDAP)."
authors = ["Soham Zemse <soham@zemse.in>"]
license = "MIT"
repository = "https://github.com/zemse/domain-cli"
keywords = ["domain", "rdap", "whois", "availability", "cli"]
categories = ["command-line-utilities"]
# Whitelist what ships to crates.io (never blacklist).
include = ["src/**/*.rs", "Cargo.toml", "README.md", "LICENSE"]

[[bin]]
name = "domain"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"

[profile.release]
strip = true
lto = true
