[package]
name = "domain-utils"
version = "0.1.1"
edition = "2024"
description = "Domain toolkit: availability, WHOIS/RDAP registration data, and DNS records across multiple backends — keyless by default."
authors = ["Soham Zemse <soham@zemse.in>"]
license = "MIT"
repository = "https://github.com/zemse/domain-utils"
keywords = ["domain", "rdap", "whois", "availability", "cli"]
categories = ["command-line-utilities"]
# Whitelist what ships to crates.io (never blacklist).
include = ["src/**/*.rs", "data/tlds.txt", "data/tld-categories.json", "Cargo.toml", "README.md", "LICENSE"]

[[bin]]
name = "domain"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
x509-parser = "0.16"

[profile.release]
strip = true
lto = true
